--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.59"                                   # error handling
 base64 = "0.22.1"
+byteorder = "1.5.0"
 bytes = "1.3.0"                                     # helps manage buffers
 rand = "0.8.5"
 thiserror = "1.0.32"                                # error handling
