Fix boolean check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "psync",
         "REPLCONF",
         "replicaof",
-        "replid"
+        "replid",
+        "XADD",
+        "zset"
     ]
 }
